k8s/deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zip-server
  labels:
    app: zip-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: zip-server
  template:
    metadata:
      labels:
        app: zip-server
    spec:
      containers:
        - name: zip-server
          image: neeraj010702/zip-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: zip-volume
              mountPath: /data
      volumes:
        - name: zip-volume
          hostPath:
            path: /mnt/data
            type: DirectoryOrCreate
