k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zip-server
  labels:
    app: zip-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zip-server
  template:
    metadata:
      labels:
        app: zip-server
    spec:
      containers:
        - name: zip-server
          image: neeraj010702/zip-server:latest  # Your Docker Hub image
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: zip-volume
              mountPath: /data              # Mount point inside container
      volumes:
        - name: zip-volume
          hostPath:
            path: /c/Users/Public/Downloads/DATA_Files  # Windows path translated for Docker/K8s
            type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: zip-server-service
spec:
  selector:
    app: zip-server
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30080   # External port to access your server
