k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zip-server-service
spec:
  selector:
    app: zip-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
